tests/error/error14.correct
class 'A' was previously declared
